tests/failing/1-forgot_func_import/main.rgo
int: @int
exit: @exit
foo: (n: int) {
    printf("Number: %d\n", n, exit(0)) // Error: forgot to import printf
}
main: () {
    foo(1)
}
